# Programmieren

./: README.md
Bash/: simple_gui.sh
C/: Makefile  a.out  hello.c  hellolib.c  hellolib.h  hellolib.h.gch
C++/: hello  hello.cpp  main.cpp
C++/Chatbot/: hello  hello.cpp
C++/Chatbot/Chatbot/: Chatbot.cbp  Chatbot.depend  Chatbot.layout  a.out  chatbot.cpp  chatbot.h  main.cpp
C/c_gui_simple/: Makefile  a.out  main.c
C/cmake/: CMakeLists.txt  main.c
C/cmake/debug/: CMakeCache.txt  Makefile  app  cmake_install.cmake
C/ncurses/test1/: Makefile  main.c
C/ncurses/test2/: CMakeLists.txt  main.c
C/ncurses/test_cursor_move/: CMakeLists.txt  main.c
C/test2/: main  main.c
C/zeiger/: CMakeLists.txt  main.c
Python/: klassen.py  klassen2.py  snmp.py  unittest.py
SQL/: example.sql
Tmux/: .tmux.conf
Vim/: .vimrc  .vimrc_mac_w_plugings  .vimrc_noplugins  README.md
